# remove-gemini-logo

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
Formula/: gemini-logo-remover.rb
