[project]
name = "gemini-logo-remover"
version = "1.0.0"
description = "Mac app to batch remove Gemini logos from images"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "jaehyunjang"}]
keywords = ["gemini", "logo", "remover", "watermark", "inpainting", "opencv"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: MacOS X",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Graphics",
]
dependencies = [
    "opencv-python>=4.10.0.84",
    "numpy>=2.0.0",
    "pillow>=11.0.0",
    "tkinterdnd2>=0.4.0",
]

[project.scripts]
gemini-logo-remover = "main:main"

[project.urls]
Homepage = "https://github.com/bear2u/gemini-logo-remover"
Repository = "https://github.com/bear2u/gemini-logo-remover"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
include = ["main.py"]
